--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -193,7 +193,7 @@
             digital marketing services can help your business grow and succeed online.</p>
           <button class="btn_primary w-60">Get your free proposal</button>
         </div>
-        <div class=>
+        <div >
           <img src="src/img/ilustr.svg" class="w-212" alt="img">
         </div>
       </div>
@@ -201,7 +201,7 @@
 
     <section class="mt-140 container">
       <div class="flex gap-40 align-center">
-        <h3 class="text_box bg-green">Case Studies</h3>
+        <h3 class="text_box bg-green hL">Case Studies</h3>
         <p>Explore Real-Life Examples of Our Proven Digital Marketing <br>
            Success through Our Case Studies</p>
 
@@ -216,7 +216,7 @@
             that resulted in a 50% increase in website traffic and a 25% increase in sales.</p>
           </div>
             <div class="flex align-center text-green">
-              <p>Learn more</p>
+              <p class="pXL">Learn more</p>
               <img src="src/img/learnMore.svg" class="icon" alt="">
             </div>
         </div>
@@ -227,7 +227,7 @@
              first page ranking for key keywords and a 200% increase in organic traffic.</p>
           </div>
           <div class="flex align-center text-green">
-            <p>Learn more</p>
+            <p class="pXL">Learn more</p>
             <img src="src/img/learnMore.svg" class="icon" alt="">
           </div>
           
@@ -240,14 +240,14 @@
             that increased followers by 25% and generated a 20% increase in online sales.</p>
          </div>
          <div class="flex align-center text-green">
-          <p>Learn more</p>
+          <p class="pXL">Learn more</p>
           <img src="src/img/learnMore.svg" class="icon" alt="">
         </div>
       </div>
     </section>
     <section class="container mt-140">
       <div class="flex gap-40">
-        <h3 class="text_box bg-green">Our Working Process </h3>
+        <h3 class="text_box bg-green hL">Our Working Process </h3>
         <p>Step-by-Step Guide to Achieving <br>Your Business Goals</p>
       </div>
     </section>
